navbar y links en la navbar

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -3,5 +3,4 @@
   <%= @company.name %>
 </p>
 
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to 'Volver', companies_path %>
