--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,25 +1,44 @@
-<h1>Companies</h1>
+<h1 class="text-center">Empresas</h1>
 
-<table>
+<table class="table table-hover" >
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Nombre</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
-  <tbody>
+  <tbody id="companies">
     <% @companies.each do |company| %>
-      <tr>
-        <td><%= company.name %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <tr id="com<%= company.id %>">
+        <td id="com-name<%= company.id %>"><%= company.name %></td>
+        <td><%= link_to 'Ver Quejas', company,class:'btn btn-info' %></td>
+        <td><%= link_to 'Edit', edit_company_path(company), remote: true, class: 'btn btn-success' %></td>
+        <td><%= link_to 'Borrar', company, method: :delete, data: { confirm: 'Are you sure?', remote: true }, class:'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<%= render 'form', company: @company %>
 
-<%= link_to 'New Company', new_company_path %>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="company-edit">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
