--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -12,7 +12,7 @@
     <% @companies.each do |company| %>
       <tr id="com<%= company.id %>">
         <td id="com-name<%= company.id %>"><%= company.name %></td>
-        <td><%= link_to 'Ver Quejas', company,class:'btn btn-info' %></td>
+        <td><%= link_to 'Ver Reclamos', company,class:'btn btn-info' %></td>
         <td><%= link_to 'Edit', edit_company_path(company), remote: true, class: 'btn btn-success' %></td>
         <td><%= link_to 'Borrar', company, method: :delete, data: { confirm: 'Are you sure?', remote: true }, class:'btn btn-danger' %></td>
       </tr>
