--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to current_user.email, '#', class:'nav-link disabled'%>
         </li>
         <li class="nav-item">
-          <%= link_to 'Cerrar Sesión', destroy_user_session_path, class: 'nav-link' %>
+          <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
       <% else %>
         <li class="nav-item">
