--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,4 +1,8 @@
 <h1 class="text-center">Empresas</h1>
+<% if current_user.present? %>
+  <h4>añadir una empresa: </h4>
+  <%= render 'form', company: @company %>
+<% end %>
 
 <table class="table table-hover" >
   <thead>
@@ -21,7 +25,7 @@
 </table>
 
 <br>
-<%= render 'form', company: @company %>
+
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
