--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="<%= root_path %>">Home <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item">
+        
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <% if current_user.present? %>
